# clap-wrapper-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: validate.yml
bundler/: Cargo.toml  README.md
bundler/src/: bundle.rs  lib.rs  main.rs  scan.rs  util.rs
examples/example-clack/src/: lib.rs
examples/example-clack/src/synth/: mod.rs  params.rs  poly_oscillator.rs
src/auv2-cpp/: generated_cocoaclasses.hxx
